# backend-service-product

./: .env  .gitignore  Cargo.toml  openFGA.dsl
migrations/: data_porduct.sql
src/: db.rs  main.rs  s3.rs
src/api/: data_product_controller.rs  mod.rs
src/model/: data_product.rs  mod.rs
src/service/: data_product_service.rs  mod.rs
